<resources>
    <string name="app_name">EC1_Moviles</string>
    <string name="titulo_ejercicio1">Ejercicio 1</string>
    <string name="titulo_ejercicio2">Ejercicio 2</string>
    <string name="nro_computadoras">N° de Computadoras</string>
    <string name="precio_computadora">Precio x Computadora: $11,000</string>
    <string name="titulo_main">Examen Continuo 1\nGrupo 9</string>
    <string name="titulo_ejercicio3">Ejercicio 3</string>
    <string name="titulo_ejercicio4">Ejercicio 4</string>
    <string name="volver">Volver</string>
    <string name="ingresar_numero">Ingresar Número</string>
    <string name="calcular_factorial">Calcular Factorial</string>
    <string name="ingrese_monto">Ingrese Monto</string>
    <string name="calcular_bonificacion">Calcular Bonificación</string>
    <string name="ingresa_numeromes">Ingresa un número del 1 al 12</string>
    <string name="ver_mes">Ver Mes</string>
    <string name="calcular_descuento">Calcular Descuento</string>
</resources>