<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio3Activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ejercicio 3"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/txtMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:ems="10"
        android:hint="@string/ingrese_monto"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/calcular_bonificacion" />

    <Button
        android:id="@+id/btnVolver3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="100dp"
        android:text="@string/volver" />


</LinearLayout>